[IMP] core: allow TLS exceptions in ir.mail_server
In the wild, several customers are running their own postfix server with
SSL/TLS/STARTTLS to deliver emails but failed to install a valid x509
certificate. Odoo is capable to encrypt the emails it sends to those
servers but it cannot verify the certificate, meaning that a pirate
ables to hijack the link is also able to perform a MitM attack: pretend
to be the remote server and read the emails Odoo sends.

A previous work already improved the security of mail servers by
offering two new encryption schemes: ssl_strict and starttls_strict, but
those two schemes can only be used with mail servers that are using
valid certificates.

In this work we make it possible to also secure the connection with the
mail servers that are using bad certificates. We let admins list the
mail servers they trust by listing the RSA public key those server are
using.

Utilities to extract a public key from a PEM certificate or to download
it from the remote mail server have been made available. They should
help admins secure their server.

task-2861790

--- a/odoo/addons/base/views/ir_mail_server_views.xml
+++ b/odoo/addons/base/views/ir_mail_server_views.xml
@@ -49,17 +49,29 @@
                                 <group>
                                     <group>
                                         <field name="smtp_encryption" widget="radio"/>
-                                        <field name="smtp_debug" groups="base.group_no_one"/>
                                         <field name="smtp_host"
                                             required="smtp_authentication != 'cli'"/>
                                         <field name="smtp_port" options="{'format': false}"
                                             required="smtp_authentication != 'cli'"/>
+                                        <field name="smtp_debug" groups="base.group_no_one"/>
+                                        <field name="smtp_ssl_check_certificate" invisible="smtp_encryption == 'none'"/>
                                     </group>
                                     <group>
                                         <field name="smtp_user" invisible="smtp_authentication == 'certificate'" force_save="1"/>
                                         <field name="smtp_pass" invisible="smtp_authentication != 'login'" password="True" force_save="1"/>
                                         <field name="smtp_ssl_certificate" invisible="smtp_authentication != 'certificate'" force_save="1"/>
                                         <field name="smtp_ssl_private_key" invisible="smtp_authentication != 'certificate'" force_save="1"/>
+                                        <field name="smtp_ssl_trusted_public_keys" invisible="smtp_encryption == 'none' or not smtp_ssl_check_certificate">
+                                            <list>
+                                                <field name="name"/>
+                                                <field name="write_date"/>
+                                                <control>
+                                                    <create string="Add a public key"/>
+                                                    <button string="Add a certificate" type="object" name="action_x509_extract_public_key" context="{'default_mail_server_id': parent.id}" class="btn-link"/>
+                                                    <button string="Download the server's public key" type="object" name="action_x509_download_public_key" context="{'default_mail_server_id': parent.id}" class="btn-link"/>
+                                                </control>
+                                            </list>
+                                        </field>
                                     </group>
                                 </group>
                             </page>
