[FIX] website_hr_recruitment: update partner_phone on job application submission
For a logged user, when applying to a job position, the phone number is filled with phone but updates mobile on submission (instead of phone field)

Steps to reproduce:
1.Navigate to jobs > /jobs in the url.
2.Log as an existing user > the phone number is pre filled in the job form based on the user's phone field (can be seen in the contact view).
3.Change the phone number in the job form.
4.Apply to the job position > click on the "i'm feeling lucky" button.
5.Navigate to contact > search for the user
6.The given phone number will overwrite the mobile field of the user view

Cause:
partner_mobile field was been used.

Solution:
use partner_phone field from hr_applicant model

opw-3964062

closes odoo/odoo#169787

X-original-commit: 689f439f170e7ca53f0cad012ccae09e9f590339
Signed-off-by: Sofie Gvaladze (sgv) <sgv@odoo.com>
Signed-off-by: Stefan Radovanovic (stra) <stra@odoo.com>

--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -239,7 +239,7 @@
                                             <div class="col-sm">
                                                 <input id="recruitment3" type="tel"
                                                     class="form-control s_website_form_input"
-                                                    name="partner_mobile" required=""
+                                                    name="partner_phone" required=""
                                                     data-fill-with="phone"/>
                                                 <div class="alert alert-warning mt-2" id="phone-message" style="display:none;"></div>
                                             </div>
