[FIX] web: make translatable icon hidden if not hover/click
The button to change the name in other languages (when you have
several activated) can be quite invasive.
We decided to render it only on hover/focus (everywhere).
task-3979068

X-original-commit: 9bf6b18eb8fabe317635816c95f34083ad01eeb6
Part-of: odoo/odoo#169782
Signed-off-by: de Wouters de Bouchout Jean-Benoît (jbw) <jbw@odoo.com>
Signed-off-by: Wala Gauthier (gawa) <gawa@odoo.com>

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -614,6 +614,13 @@
             display: inline-block;
             text-align: right;
             border: none;  // usefull for textarea
+            visibility: hidden;
+    }
+
+    div {
+        div:focus-within > span.o_field_translate, div:hover > span.o_field_translate {
+            visibility: visible !important;
+        }
     }
 
     input, textarea {
