--- a/addons/crm/views/res_partner_views.xml
+++ b/addons/crm/views/res_partner_views.xml
@@ -8,19 +8,10 @@
             <field name="inherit_id" ref="base.res_partner_kanban_view"/>
             <field name="priority" eval="10"/>
             <field name="arch" type="xml">
-                <field name="mobile" position="after">
-                    <field name="opportunity_count" groups="sales_team.group_sale_salesman"/>
-                </field>
-                <xpath expr="//div[hasclass('oe_kanban_bottom_left')]" position="inside">
-                    <a t-if="record.opportunity_count.value>0" href="#"
-                       groups="sales_team.group_sale_salesman"
-                       data-type="object" data-name="action_view_opportunity"
-                       class="oe_kanban_action oe_kanban_action_a me-1">
-                        <span class="badge rounded-pill">
-                            <i class="fa fa-fw fa-star" aria-label="Opportunities"
-                               role="img" title="Opportunities"/>
-                            <span t-out="record.opportunity_count.value" class="ms-1"/>
-                        </span>
+                <xpath expr="//footer/div" position="inside">
+                    <a t-if="record.opportunity_count.value>0" type="object" name="action_view_opportunity" class="btn btn-sm btn-link smaller" role="button">
+                        <i class="fa fa-star me-1" aria-label="Opportunities" role="img" title="Opportunities"/>
+                        <field name="opportunity_count"/>
                     </a>
                 </xpath>
             </field>
