--- a/addons/sale/views/res_partner_views.xml
+++ b/addons/sale/views/res_partner_views.xml
@@ -22,17 +22,10 @@
         <field name="inherit_id" ref="base.res_partner_kanban_view"/>
         <field name="priority" eval="20"/>
         <field name="arch" type="xml">
-            <field name="mobile" position="after">
-                <field name="sale_order_count" groups="sales_team.group_sale_salesman"/>
-            </field>
-            <xpath expr="//div[hasclass('oe_kanban_bottom_left')]" position="inside">
-                <a t-if="record.sale_order_count.value>0" data-type="object" data-name="action_view_sale_order"
-                   groups="sales_team.group_sale_salesman"
-                   href="#" class="oe_kanban_action oe_kanban_action_a me-1">
-                    <span class="badge rounded-pill">
-                        <i class="fa fa-fw fa-usd" role="img" aria-label="Sale orders" title="Sales orders"/>
-                        <t t-out="record.sale_order_count.value"/>
-                    </span>
+            <xpath expr="//footer/div" position="inside">
+                <a t-if="record.sale_order_count.value>0" type="object" name="action_view_sale_order" class="btn btn-sm btn-link smaller" role="button">
+                    <i class="fa fa-usd me-1" role="img" aria-label="Sale orders" title="Sales orders"/>
+                    <field name="sale_order_count"/>
                 </a>
             </xpath>
         </field>
