--- a/odoo/addons/base/views/res_partner_views.xml
+++ b/odoo/addons/base/views/res_partner_views.xml
@@ -214,53 +214,29 @@
                     <notebook colspan="4">
                         <page string="Contacts &amp; Addresses" name="contact_addresses" autofocus="autofocus">
                             <field name="child_ids" mode="kanban" context="{'default_parent_id': id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_lang': lang, 'default_user_id': user_id, 'default_type': 'other'}">
-                                <kanban>
-                                    <field name="id"/>
+                                <kanban color="color">
                                     <field name="color"/>
-                                    <field name="name"/>
-                                    <field name="title"/>
                                     <field name="type"/>
-                                    <field name="email"/>
-                                    <field name="parent_id"/>
-                                    <field name="is_company"/>
-                                    <field name="function"/>
-                                    <field name="phone"/>
-                                    <field name="street"/>
-                                    <field name="street2"/>
-                                    <field name="zip"/>
-                                    <field name="city"/>
-                                    <field name="country_id"/>
-                                    <field name="mobile"/>
-                                    <field name="state_id"/>
-                                    <field name="image_128"/>
-                                    <field name="avatar_128"/>
-                                    <field name="lang"/>
-                                    <!-- fields in form x2many view to diminish requests -->
-                                    <field name="comment"/>
-                                    <field name="display_name"/>
                                     <templates>
-                                        <t t-name="kanban-box">
-                                            <t t-set="color" t-value="kanban_color(record.color.raw_value)"/>
-                                            <div t-att-class="color + (record.title.raw_value == 1 ? ' oe_kanban_color_alert' : '') + ' oe_kanban_global_click o_kanban_record_has_image_fill o_res_partner_kanban'">
-                                                <div class="o_kanban_image_fill_left">
-                                                    <img alt="Contact image" t-att-src="kanban_image('res.partner', 'avatar_128', record.id.raw_value)"/>
-                                                </div>
-                                                <div class="oe_kanban_details">
-                                                    <field name="name" class="fw-bold"/>
-                                                    <div t-if="record.function.raw_value"><field name="function"/></div>
-                                                    <div t-if="record.email.raw_value"><field name="email" widget="email"/></div>
-                                                    <div t-if="record.type.raw_value != 'contact'">
-                                                        <div>
-                                                            <field name="zip"/><t t-if="record.city"> </t>
-                                                            <field name="city"/>
-                                                        </div>
-                                                        <field t-if="record.state_id.raw_value" name="state_id"/><t t-if="record.country_id"> </t>
-                                                        <field name="country_id"/>
+                                        <t t-name="kanban-card" class="row g-0">
+                                            <aside class="col-3 col-sm-2 col-md-3 o_kanban_aside_full">
+                                                <field name="avatar_128" widget="image" options="{'img_class': 'object-fit-cover'}" alt="Contact image"/>
+                                            </aside>
+                                            <main class="col-9 col-sm-10 col-md-9 ps-2">
+                                                <field name="name" class="fw-bold"/>
+                                                <field name="function"/>
+                                                <field name="email" widget="email"/>
+                                                <div t-if="record.type.raw_value != 'contact'">
+                                                    <div>
+                                                        <field class="me-1" name="zip"/>
+                                                        <field name="city"/>
                                                     </div>
-                                                    <div t-if="record.phone.raw_value">Phone: <t t-esc="record.phone.value"/></div>
-                                                    <div t-if="record.mobile.raw_value">Mobile: <t t-esc="record.mobile.value"/></div>
+                                                    <field class="me-1" name="state_id"/>
+                                                    <field name="country_id"/>
                                                 </div>
-                                            </div>
+                                                <div t-if="record.phone.raw_value">Phone: <field name="phone"/></div>
+                                                <div t-if="record.mobile.raw_value">Mobile: <field name="mobile"/></div>
+                                            </main>
                                         </t>
                                     </templates>
                                 </kanban>
@@ -418,72 +394,40 @@
             <field name="model">res.partner</field>
             <field name="arch" type="xml">
                 <kanban sample="1">
-                    <field name="id"/>
-                    <field name="color"/>
-                    <field name="display_name"/>
-                    <field name="title"/>
-                    <field name="email"/>
-                    <field name="parent_id"/>
-                    <field name="is_company"/>
-                    <field name="function"/>
-                    <field name="phone"/>
-                    <field name="street"/>
-                    <field name="street2"/>
-                    <field name="zip"/>
-                    <field name="city"/>
-                    <field name="country_id"/>
-                    <field name="mobile"/>
-                    <field name="state_id"/>
-                    <field name="category_id"/>
                     <field name="avatar_128"/>
-                    <field name="type"/>
+                    <field name="is_company"/>
                     <field name="active"/>
                     <templates>
-                        <t t-name="kanban-box">
-                            <div class="oe_kanban_global_click o_kanban_record_has_image_fill o_res_partner_kanban">
+                        <t t-name="kanban-card" class="row g-0">
+                            <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
+                            <aside class="col-3 col-sm-2 col-md-4 o_kanban_aside_full">
                                 <t t-if="!record.is_company.raw_value">
-                                    <t t-set="avatar_image" t-value="kanban_image('res.partner', 'avatar_128', record.id.raw_value)"/>
-                                    <div class="o_kanban_image_fill_left d-none d-md-block">
-                                        <img t-attf-src="#{avatar_image}" t-att-alt="record.id.value"/>
-                                        <img class="o_kanban_image_inner_pic" t-if="record.parent_id.raw_value" t-att-alt="record.parent_id.value" t-att-src="kanban_image('res.partner', 'avatar_128', record.parent_id.raw_value)"/>
-                                    </div>
-                                    <div class="o_kanban_image d-md-none d-block">
-                                        <img t-attf-src="#{avatar_image}" t-att-alt="record.id.value"/>
-                                        <img class="o_kanban_image_inner_pic" t-if="record.parent_id.raw_value" t-att-alt="record.parent_id.value" t-att-src="kanban_image('res.partner', 'avatar_128', record.parent_id.raw_value)"/>
+                                    <div class="position-relative w-100">
+                                        <field name="avatar_128" alt="Contact image" class="position-absolute top-0 start-0 h-100 w-100" widget="image" options="{'img_class': 'object-fit-cover w-100 h-100'}"/>
+                                        <field t-if="record.parent_id.raw_value" name="parent_id" class="position-absolute bottom-0 end-0 w-25 bg-light" widget="image" options="{'preview_image': 'image_128', 'img_class': 'object-fit-contain'}"/>
                                     </div>
                                 </t>
                                 <t t-else="">
-                                    <div class="o_kanban_image_fill_left d-none d-md-block o_kanban_image_full">
-                                        <img t-attf-src="#{kanban_image('res.partner', 'avatar_128', record.id.raw_value)}" role="img" t-att-alt="record.id.value"/>
-                                    </div>
-                                    <div class="o_kanban_image d-md-none d-block o_kanban_image_full">
-                                        <img  t-attf-src="#{kanban_image('res.partner', 'avatar_128', record.id.raw_value)}" role="img" t-att-alt="record.id.value"/>
-                                    </div>
+                                    <field name="avatar_128" class="w-100" widget="image" options="{'img_class': 'object-fit-contain w-100 h-100'}"/>
                                 </t>
-                                <div class="ribbon ribbon-top-right" invisible="active">
-                                    <span class="text-bg-danger">Archived</span>
-                                </div>
-                                <div class="oe_kanban_details d-flex flex-column justify-content-between">
-                                    <div>
-                                        <strong class="o_kanban_record_title oe_partner_heading"><field name="display_name"/></strong>
-                                        <div class="o_kanban_tags_section oe_kanban_partner_categories"/>
-                                        <ul>
-                                            <li t-if="record.parent_id.raw_value and !record.function.raw_value"><field name="parent_id"/></li>
-                                            <li t-elif="!record.parent_id.raw_value and record.function.raw_value"><field name="function"/></li>
-                                            <li t-elif="record.parent_id.raw_value and record.function.raw_value"><field name="function"/> at <field name="parent_id"/></li>
-                                            <li t-if="record.city.raw_value or record.country_id.raw_value">
-                                                <t t-if="record.city.raw_value"><field name="city"/><t t-if="record.country_id.raw_value">, </t></t>
-                                                <t t-if="record.country_id.raw_value"><field name="country_id"/></t>
-                                            </li>
-                                            <li t-if="record.email.raw_value" class="o_text_overflow"><field name="email"/></li>
-                                        </ul>
-                                    </div>
-                                    <div class="o_kanban_record_bottom">
-                                        <div class="oe_kanban_bottom_left"/>
-                                        <div class="oe_kanban_bottom_right"/>
+                            </aside>
+                            <main class="col-9 col-sm-10 col-md-8  ps-2">
+                                <div class="mb-1">
+                                    <field name="display_name" class="mb-0 h5"/>
+                                    <field t-if="record.parent_id.raw_value and !record.function.raw_value" class="text-muted" name="parent_id"/>
+                                    <field t-elif="!record.parent_id.raw_value and record.function.raw_value" class="text-muted" name="function"/>
+                                    <div t-elif="record.parent_id.raw_value and record.function.raw_value" class="text-muted">
+                                        <field name="function"/> at <field name="parent_id"/>
                                     </div>
                                 </div>
-                            </div>
+                                <div t-if="record.city.raw_value or record.country_id.raw_value">
+                                    <field name="city"/>
+                                    <span t-if="record.city.raw_value and record.country_id.raw_value">, </span>
+                                    <field name="country_id"/>
+                                </div>
+                                <field name="email" class="text-truncate"/>
+                                <footer><div/></footer>
+                            </main>
                         </t>
                     </templates>
                 </kanban>
