[FIX] product: improve UX on form view of product
An empty line was rendered even if no tags of variants were put on
a product.
And the UoM on the form view of the products is on 2 lines.
The length of the size was limited (as UoM don't need to be that long).

task-3979068

closes odoo/odoo#169782

X-original-commit: 9f1a8247c28f31b56da7ce8e4824b4f2a0d894d8
Signed-off-by: de Wouters de Bouchout Jean-Benoît (jbw) <jbw@odoo.com>
Signed-off-by: Wala Gauthier (gawa) <gawa@odoo.com>

--- a/addons/product/views/product_views.xml
+++ b/addons/product/views/product_views.xml
@@ -91,7 +91,7 @@
                                             options="{'currency_field': 'currency_id', 'field_digits': True}"/>
                                             <span name="uom_span" groups="uom.group_uom">per
                                                 <field name="uom_id"
-                                                    class="oe_inline"
+                                                    class="oe_inline" style="max-width:136px"
                                                     options="{'no_create': True}"/>
                                             </span>
                                     </div>
@@ -447,7 +447,7 @@
                     <field name="product_tmpl_id" class="oe_inline" readonly="1" invisible="1" required="id"/>
                 </field>
                 <xpath expr="//div[hasclass('oe_title')]" position="inside">
-                    <field name="product_template_variant_value_ids" widget="many2many_tags" readonly="1" groups="product.group_product_variant"/>
+                    <field name="product_template_variant_value_ids" widget="many2many_tags" readonly="1" invisible="not product_template_variant_value_ids" groups="product.group_product_variant"/>
                 </xpath>
                 <field name="product_tag_ids" position="attributes">
                     <attribute name="options">{'no_open': True}</attribute>
