--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -43,8 +43,7 @@
             </xpath>
             <field name="categ_id" position="after">
                 <field name="default_code" invisible="product_variant_count &gt; 1"/>
-                <field name="valid_product_template_attribute_line_ids" invisible="1"/>
-                <field name="barcode" invisible="product_variant_count &gt; 1 or (product_variant_count == 0 and valid_product_template_attribute_line_ids)"/>
+                <field name="barcode" invisible="product_variant_count &gt; 1"/>
             </field>
 
             <div name="button_box" position="inside">
