--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -1383,7 +1383,7 @@
                     <div class="o_attachment_preview"
                          invisible="move_type not in ('out_invoice', 'out_refund', 'in_invoice', 'in_refund') or state != 'draft'" />
                     <!-- Chatter -->
-                    <chatter/>
+                    <chatter reload_on_attachment="True"/>
                 </form>
             </field>
         </record>
