--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -24,6 +24,10 @@
         background-clip: padding-box;
     }
 
+    th {
+        border: 1px solid black;
+    }
+
     .o_list_view & {
         --ListRenderer-thead-padding-y: #{$table-cell-padding-y-sm};
         --ListRenderer-table-padding-x: #{$o-horizontal-padding};
