--- a/addons/jys_tiktok/views/jys_tiktok_menu.xml
+++ b/addons/jys_tiktok/views/jys_tiktok_menu.xml
@@ -26,6 +26,11 @@
             action="action_jys_tiktok_delivery_carrier"
             sequence="30"/>
 
+            <menuitem id="menu_tiktok_token"
+            name="Token"
+            action="action_tiktok_token"
+            sequence="30"/>
+
             <menuitem id="menu_jys_tiktok_api_log"
             name="History API"
             action="action_jys_tiktok_history_api"
