--- a/addons/jys_tiktok/views/tiktok_order_views.xml
+++ b/addons/jys_tiktok/views/tiktok_order_views.xml
@@ -5,9 +5,12 @@
             <field name="name">tiktok.order.tree</field>
             <field name="model">tiktok.order</field>
             <field name="arch" type="xml">
-                <tree string="Tiktok Order">
+                <tree string="Tiktok Orders">
                     <field name="name"/>
-                    <field name="status"/>
+                    <field name="shop_id"/>
+                    <field name="order_status"/>
+                    <field name="date_update"/>
+                    <field name="is_updated"/>
                 </tree>
             </field>
         </record>
@@ -16,7 +19,7 @@
             <field name="name">tiktok.order.form</field>
             <field name="model">tiktok.order</field>
             <field name="arch" type="xml">
-                <form string="Tiktok Order">
+                <form string="Tiktok Orders">
                     <sheet>
                         <div class="oe_title">
                             <label for="name" class="oe_edit_only"/>
@@ -25,10 +28,35 @@
                             </h1>
                         </div>
                         <group>
-                            <field name="status"/>
+                            <field name="shop_id" required="1"/>
+                            <field name="order_status" required="1"/>
+                            <field name="date_update" readonly="1"/>
+                            <field name="is_updated"/>
+                            <field name="is_job"/>
+
                         </group>
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <record id="view_tiktok_order_search" model="ir.ui.view">
+            <field name="name">tiktok.order.search</field>
+            <field name="model">tiktok.order</field>
+            <field name="arch" type="xml">
+                <search string="Tiktok Orders">
+                    <field name="name"/>
+                    <field name="order_status"/>
+                    <field name="shop_id"/>
+                    <separator/>
+                    <filter string="Updated" name="updated" domain="[('is_updated','=',True)]"/>
+                    <filter string="Not Updated" name="not_updated" domain="[('is_updated','=',False)]"/>
+                    <group expand="0" string="Group By">
+                        <filter string="Serial Number" name="serial_number" context="{'group_by':'name'}"/>
+                        <filter string="Order Status" name="order_status" context="{'group_by':'order_status'}"/>
+                        <filter string="Shops" name="shops" context="{'group_by':'shop_id'}"/>
+                    </group>
+               </search>
             </field>
         </record>
 
@@ -37,8 +65,9 @@
             <field name="res_model">tiktok.order</field>
             <field name="type">ir.actions.act_window</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <field name="context">{'search_default_not_updated': 1}</field>
         </record>
 
+        \
     </data>
 </odoo>
