--- a/addons/jys_tiktok/static/src/custom.css
+++ b/addons/jys_tiktok/static/src/custom.css
@@ -3,3 +3,7 @@ button.tiktok-button-delete {
     background-color: red !important;
     color: white !important;
 }
+
+button.tiktok-button-upload {
+    margin-right: 20px;
+}
