--- a/addons/jys_tiktok/views/jys_tiktok_menu.xml
+++ b/addons/jys_tiktok/views/jys_tiktok_menu.xml
@@ -21,20 +21,30 @@
             action="action_jys_tiktok_attribute"
             sequence="20"/>
 
+            <menuitem id="menu_jys_tiktok_brand"
+            name="Brands"
+            action="action_jys_tiktok_brand"
+            sequence="30"/>
+
+            <menuitem id="menu_jys_tiktok_product_image"
+            name="Images"
+            action="action_jys_tiktok_product_image"
+            sequence="40"/>
+
             <menuitem id="menu_jys_tiktok_delivery_carrier"
             name="Logistics"
             action="action_jys_tiktok_delivery_carrier"
-            sequence="30"/>
+            sequence="50"/>
 
             <menuitem id="menu_tiktok_token"
             name="Token"
             action="action_tiktok_token"
-            sequence="30"/>
+            sequence="60"/>
 
             <menuitem id="menu_jys_tiktok_api_log"
             name="History API"
             action="action_jys_tiktok_history_api"
-            sequence="40"/>
+            sequence="70"/>
 
         </menuitem>
 
@@ -67,6 +77,26 @@
             name="Get Items"
             action="action_jys_tiktok_get_item"
             sequence="20"/>
+
+            <menuitem id="menu_jys_tiktok_get_category"
+            name="Get Categories"
+            action="action_jys_tiktok_get_category"
+            sequence="30"/>
+
+            <menuitem id="menu_jys_tiktok_get_attribute"
+            name="Get Attributes"
+            action="action_jys_tiktok_get_attribute"
+            sequence="40"/>
+
+            <menuitem id="menu_jys_tiktok_get_brand"
+            name="Get Brands"
+            action="action_jys_tiktok_get_brand"
+            sequence="50"/>
+
+            <menuitem id="menu_jys_tiktok_get_product"
+            name="Get Products"
+            action="action_jys_tiktok_get_product"
+            sequence="60"/>
         </menuitem>
 
         <menuitem id="shop_menu_jys_tiktok"
