--- a/addons/jys_tiktok/views/product_template_views.xml
+++ b/addons/jys_tiktok/views/product_template_views.xml
@@ -27,11 +27,15 @@
 
                     <div style="clear: both;"/>
                 </xpath>
-                <xpath expr="//field[@name='default_code']" position="after">
+                <!-- <xpath expr="//field[@name='default_code']" position="after">
                     <field name="tiktok_sku"/>
-                </xpath>
+                </xpath> -->
                 <xpath expr="//page[@name='general_information']" position="after">
                     <page string="Tiktok" invisible="is_tiktok == False">
+                        <separator string="SKU"/>
+                        <group>
+                            <field name="tiktok_sku" required="is_tiktok == True"/>
+                        </group>
                         <separator string="Items"/>
                         <field name="tiktok_product_ids" nolabel="1" readonly="0">
                             <tree editable="bottom">
@@ -41,7 +45,7 @@
                                 <field name="price"/>
                             </tree>
                         </field>
-
+                       
                         <!-- <field name="tiktok_product_image_ids" nolabel="1" string="Images">
                             <tree string="Images" editable="bottom">
                                 <field name="image" widget="image" nolabel="1"/>
@@ -50,6 +54,7 @@
                         <!-- <separator string="Upload Image"/> -->
 
                         <separator string="Image"/>
+                        <button name="action_upload_image_wizard" type="object" string="Upload Image to TikTok" class="oe_highlight tiktok-button-upload" invisible="not tiktok_product_image_ids"/>
                         <button name="action_open_delete_confirmation_wizard" type="object" string="Delete All Image" class="oe_highlight tiktok-button-delete" invisible="not tiktok_product_image_ids"/>
 
                         <field name="tiktok_product_image_ids" widget="kanban" string="Images">
@@ -85,7 +90,7 @@
             <field name="inherit_id" ref="product.product_template_kanban_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='product_properties']" position="after">
-                    <field name="is_tiktok" invisible="1"/>
+                    <field name="is_tiktok" invisible="1"/> 
                     <div style="display: inline-block; float:right">
                         <img src="/jys_tiktok/static/img/tiktok_logo.png" alt="Tiktok" style="width: 24px; height: 24px; display:flex; flex-direction: row-reverse" invisible="is_tiktok == False"/>
                     </div>
@@ -151,20 +156,6 @@
                         </field>
                         <field name="upload_product_var_tt_image_ids" widget="many2many_binary" string="Images" nolabel="1" context="{'upload_tiktok_image': True}"/>
                     </page>
-                </xpath>
-            </field>
-        </record>
-
-        <record id="jys_product_product_kanban_inherit" model="ir.ui.view">
-            <field name="name">jys.tiktok.product.product.kanban</field>
-            <field name="model">product.product</field>
-            <field name="inherit_id" ref="product.product_kanban_view"/>
-            <field name="arch" type="xml">
-                <xpath expr="//div[@name='tags']" position="after">
-                    <field name="is_sync_tiktok" invisible="1"/>
-                    <div style="display: inline-block; float:right">
-                        <img src="/jys_tiktok/static/img/tiktok_logo.png" alt="Tiktok" style="width: 24px; height: 24px; display:flex; flex-direction: row-reverse" invisible="is_sync_tiktok == False"/>
-                    </div>
                 </xpath>
             </field>
         </record>
