--- a/addons/jys_tiktok/wizard/tiktok_add_product_views.xml
+++ b/addons/jys_tiktok/wizard/tiktok_add_product_views.xml
@@ -10,7 +10,7 @@
                         Add Product to Tiktok.
                     </p>
                     <separator string="Shops"/>
-                    <field name="name" nolabel="1" required="1"/>
+                    <field name="shop_id" nolabel="1" required="1"/>
                     
                     <footer>
                         <button name="add_product" string="Confirm" type="object" class="oe_highlight"/>
